# nm_actor

./: 01_nm_actor.sh  Cargo.toml  README.md  README.rst  _service  nm_actor.spec  rust-nm_actor.spec
src/: actor.rs  lib.rs  main.rs
src/actor/: command_exec.rs  exec.rs
tests/: actor_test.rs  mock_exec.rs
