[package]
name = "nm_actor"
version = "1.0.6"
authors = ["Hannes Hochreiner <hannes@hochreiner.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
maintenance = { status = "as-is" }
readme = "README.rst"
repository = "https://github.com/hannes-hochreiner/nm_actor"

[dependencies]
log = "0.4"
env_logger = "0.7.1"
