[package]
name = "nm_actor"
version = "1.0.7"
authors = ["Hannes Hochreiner <hannes@hochreiner.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"
maintenance = { status = "as-is" }
readme = "README.md"
repository = "https://github.com/hannes-hochreiner/nm_actor"
description = "a tool to automatically activate and deactivate a VPN connection depending on the network environment"

[dependencies]
log = "0.4"
env_logger = "0.9.0"
